Se agrego una descripcion acerca de lo hecho

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Oscar Antonio Hernandez Hernandez</h1>
+    <p>Estoy aprendiendo a usar Git por medio de Visual Code</p>
 </body>
 </html>
